PromotedLinks can be selfposts.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -4274,6 +4274,10 @@ ul.tabmenu.formtab {
     width: 100%; 
 }
 
+#kind-selector label {
+    padding-right: 20px;
+}
+
 .campaign { 
     border: 1px solid #336699; 
     background-color: #EFF7FF;
