--- a/r2/r2/templates/printablebuttons.html
+++ b/r2/r2/templates/printablebuttons.html
@@ -277,7 +277,8 @@
       ${self.bylink_button(_("context"), thing.permalink + "?context=3")}
     </li>
     <li class="first">
-    ${self.comment_button("comment", _("full comments"), 
+    ${self.comment_button("comment",
+                          _("full comments") + " (%d)" % thing.full_comment_count, 
                           thing.full_comment_path,
                           _sr_path = True, 
                           a_class = None, 
