Remove update notice from footer privacy policy link.

--- a/r2/r2/templates/redditfooter.html
+++ b/r2/r2/templates/redditfooter.html
@@ -49,9 +49,8 @@
               "%(user_agreement)s and %(privacy_policy)s"), nocname=True,
       user_agreement = dict(link_text=_("User Agreement {Genitive}"),
                             path="/help/useragreement"),
-      privacy_policy = dict(link_text=_("Privacy Policy (updated)"),
-                            path="/help/privacypolicy",
-                            _class="updated"))}.
+      privacy_policy = dict(link_text=_("Privacy Policy {Genitive}"),
+                            path="/help/privacypolicy"))}.
     &copy; ${_("%(year)d reddit inc. All rights reserved.") % \
     dict(year=datetime.datetime.now().timetuple()[0])}
   </p>
