--- a/r2/r2/templates/sidebarmultilist.html
+++ b/r2/r2/templates/sidebarmultilist.html
@@ -22,7 +22,7 @@
 
 <ul id="side-multi-list">
 %for multi in thing.multis:
-  <li><a href="${multi.path}">${multi.name}</a></li>
+  <li><a href="${multi.path}" title="${multi.name}">${multi.name}</a></li>
 %endfor
 </ul>
 
