Fix the column widths of the user page multi list.
The width of em units were varying across platforms wrt the box size.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -5098,9 +5098,11 @@ table.calendar {
 
 #side-multi-list {
     li {
+        @columns: 3;
+        @column-spacing: 3px;
         display: inline-block;
-        width: 7.5em;
-        margin-right: .5em;
+        width: 288px / @columns - @column-spacing;
+        margin-right: @column-spacing;
         text-overflow: ellipsis;
         overflow: hidden;
     }
