--- a/r2/r2/templates/flairlistrow.html
+++ b/r2/r2/templates/flairlistrow.html
@@ -45,7 +45,7 @@ from r2.lib.pages import WrappedUser
     <button type="submit">${_('save')}</button>
     <button class="flairdeletebtn">delete</button>
     <span class="status"></span>
-    ${utils.error_field(('BAD_CSS_NAME', 'flair_css_class'), 'name')}
-    ${utils.error_field(('TOO_MUCH_FLAIR_CSS', 'flair_css_class'), 'name')}
+    ${utils.error_field('BAD_CSS_NAME', 'css_class')}
+    ${utils.error_field('TOO_MUCH_FLAIR_CSS', 'css_class')}
   </form>
 </div>
