Flair toggle: Add a <label> tag

--- a/r2/r2/templates/flairprefs.html
+++ b/r2/r2/templates/flairprefs.html
@@ -27,7 +27,9 @@
           checked="checked"
         %endif
         >
-    ${_("Show my flair on this subreddit. It looks like:")}
+    <label for="flair_enabled">
+        ${_("Show my flair on this subreddit. It looks like:")}
+    </label>
   </form>
   <div class="tagline">${thing.wrapped_user}</div>
 %endif
