Post buttons: Allow wrapping on smaller screens

--- a/r2/r2/public/static/css/reddit-ie7-hax.css
+++ b/r2/r2/public/static/css/reddit-ie7-hax.css
@@ -3,6 +3,10 @@
     height: 17px;
 }
 
+/* IE7 doesn't understand inline-block */
+.entry .flat-list.buttons li { display: inline; }
+.pretty-button { display: inline; }
+
 .entry.unvoted .score.unvoted { display: inline;  }
 .entry.unvoted div.score.unvoted { display: inline;  }
 
