--- a/r2/r2/templates/printable.html
+++ b/r2/r2/templates/printable.html
@@ -76,6 +76,8 @@ ${self.RenderPrintable()}
       rowclass += " gilded"
     if hasattr(what, "user_gilded") and what.user_gilded:
       rowclass += " user-gilded"
+    if getattr(what, "stickied", False):
+      rowclass += " stickied"
   %>
   ${rowclass}
 </%def>
