exclude_banned_modqueue: apply to unmoderated as well

--- a/r2/r2/templates/createsubreddit.html
+++ b/r2/r2/templates/createsubreddit.html
@@ -261,7 +261,7 @@
                  %endif
           >
           <label for="exclude_banned_modqueue">
-            ${_("exclude posts by site-wide banned users from modqueue")}
+            ${_("exclude posts by site-wide banned users from modqueue/unmoderated")}
           </label>
         </li>
         <li>
