--- a/r2/r2/templates/multiinfobar.html
+++ b/r2/r2/templates/multiinfobar.html
@@ -105,5 +105,40 @@
       ${_("a multireddit for")}&#32;${thing_timestamp(thing.multi)}
     </span>
   </div>
-</div>
 
+  <div id="multi-recs" class="recommend-box">
+
+    <div class="recs">
+      <div>
+        <h1>
+          ${_("people also added:")}
+        </h1>
+      </div>
+      <ul class="recommendations"></ul>
+      <span class="more">${_("more suggestions")}</span>
+    </div>
+
+    <div class="endoflist">
+      <h1>${_("no more suggestions!")}</h1>
+      <div class="heading">${_("would you like to...")}</div>
+      <ul>
+        <li>
+          <a href="/r/ModeratorDuck/wiki/subreddit_classification" target="_blank">
+            ${_("check out subreddits by category")}
+          </a>
+        </li>
+        <li>
+          <a href="/r/random" target="_blank">
+            ${_("explore a random subreddit")}
+          </a>
+        </li>
+        <li>
+          <a class="reset">
+            ${_("see the suggestions again")}
+          </a>
+        </li>
+      </ul>
+    </div>
+
+  </div>
+</div>
