Stickies: set with a button on comments page
This replaces the need to enter the sticky's permalink on the subreddit
settings page, and adds a new button for stickying/unstickying next to
the contest mode button.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -1330,6 +1330,8 @@ a.author { margin-right: 0.5em; }
     margin: 0 310px 10px 10px;
     padding: 0;
     color: gray;
+
+    form { padding-left: 8px; }
 }
 
 .commentarea .menuarea .toggle {
