--- a/r2/r2/templates/linkcommentssettings.html
+++ b/r2/r2/templates/linkcommentssettings.html
@@ -37,3 +37,14 @@
 %if thing.can_edit or thing.contest_mode:
   &nbsp;<span class="help-hoverable" title="${_('contest mode randomizes sorting and hides scores. this feature is temporarily available to assist best of 2012 contests.')}">(?)</span>
 %endif
+
+%if thing.can_edit and thing.link.is_self:
+  %if thing.stickied:
+    ${ynbutton(_("unsticky this post"), _("unstickied"), "set_subreddit_sticky",
+      hidden_data=dict(id=thing.link._fullname, state=False))}
+  %else:
+    ${ynbutton(_("sticky this post"), _("stickied"), "set_subreddit_sticky",
+      question=_("sticky this? (any existing sticky will be replaced)"),
+      hidden_data=dict(id=thing.link._fullname, state=True))}
+  %endif
+%endif
