--- a/r2/r2/templates/promotelinkform.html
+++ b/r2/r2/templates/promotelinkform.html
@@ -346,14 +346,14 @@ ${self.javascript_setup()}
                 <input id="no_targeting" class="nomargin" 
                        type="radio"  value="none" name="targeting"
                        onclick="r.sponsored.targeting_off()"
-                       checked="checked" /> 
+                       checked="checked">
                 ${_("no targeting (displays site-wide)")}
               </label>
               <br />
               <label>
                 <input id="targeting" class="nomargin" 
                        type="radio"  value="one" name="targeting"
-                       onclick="r.sponsored.targeting_on()" /> 
+                       onclick="r.sponsored.targeting_on()">
                 ${_("enable targeting (runs on a specific subreddit)")}
               </label>
 
