Allow all employees to distinguish as admin.

--- a/r2/r2/templates/printablebuttons.html
+++ b/r2/r2/templates/printablebuttons.html
@@ -99,7 +99,7 @@
          ${distinguish_setter('no')}
          &#32;
 
-         %if c.user_is_admin:
+         %if c.user.employee:
          /&#32;
          ${distinguish_setter('admin')}
          &#32;
