Manually refund underdelivered campaigns.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -4259,6 +4259,11 @@ ul.tabmenu.formtab {
     background-image: url(../green-check.png);  
 }
 
+.existing-campaigns tr.refund {
+    color: red;
+    font-weight: bold;
+}
+
 .existing-campaigns td.bid .info{ 
     margin-right: 3px; 
 }
