wiki: Add option to remove wiki pages from list
When combined with a mod only page, this allows users to delete and
undelete pages. This also allows users to "move" pages by unlisting
the old one.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -6875,6 +6875,7 @@ body:not(.gold) .allminus-link {
 .modactions.wikibanned,
 .modactions.wikiunbanned,
 .modactions.wikicontributor,
+.modactions.wikipagelisted,
 .modactions.removewikicontributor,
 .modactions.ignorereports,
 .modactions.unignorereports,
@@ -6920,6 +6921,7 @@ body:not(.gold) .allminus-link {
 .modactions.removecontributor {
     background-image: url(../modactions_removecontributor.png); /* SPRITE */
 }
+.modactions.wikipagelisted,
 .modactions.editsettings {
     background-image: url(../modactions_editsettings.png); /* SPRITE */
 }
