preview: Preview stickied link.

--- a/r2/r2/templates/subredditstylesheet.html
+++ b/r2/r2/templates/subredditstylesheet.html
@@ -118,6 +118,10 @@
         <td id="preview_link_media"></td>
       </tr>
       <tr>
+        <th>${_("stickied link")}</th>
+        <td id="preview_link_stickied"></td>
+      </tr>
+      <tr>
         <th>${_("comment")}</th>
         <td id="preview_comment"></td>
       </tr>
